--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Phaser Ship - Full Window Resize</title>
+    <title>Phaser Ship - Fixes (Log, Shape, Scale)</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
     <style>
-        /* Ensure html and body take full height */
-        html, body {
+        /* Basic CSS to remove margin and allow scrolling if needed */
+        html,
+        body {
             height: 100%;
+            /* Optional */
             margin: 0;
-            overflow: hidden; /* Prevent scrollbars */
-            background-color: #222; /* Background for areas outside canvas (if any) */
+            background-color: #222;
+            overflow: auto;
+            /* Allow scrolling if game > window */
         }
-        /* Make canvas display as block to prevent extra space */
+
         canvas {
             display: block;
-            /* border: 1px solid #fff; */ /* Optional border */
+            /* Prevent extra space */
         }
     </style>
 </head>
+
 <body>
     <script>
         // --- Play Scene Definition ---
@@ -28,11 +33,13 @@
                 super("PlayScene"); // Scene key
                 this.player = null;
                 this.cursors = null;
-                this.visualLayer = null; // Renamed layer for clarity
+                this.visualLayer = null;
                 this.map = null;
                 this.tilemapData = null; // Hold generated map data
-                this.mapPixelWidth = 0; // Map dimensions
-                this.mapPixelHeight = 0;
+                this.mapWidthInTiles = 40; // Default dimensions for fallback
+                this.mapHeightInTiles = 32;
+                this.mapPixelWidth = this.mapWidthInTiles * 32;
+                this.mapPixelHeight = this.mapHeightInTiles * 32;
 
                 // --- Touch Control Properties ---
                 this.zoneRotate = null; this.zoneThrust = null; this.touchRotatePointer = null;
@@ -41,17 +48,21 @@
             }
 
             preload() {
+                // --- Attempt to load map PNG ---
+                // this.load.image('mapPNG', 'playfield.png'); // Keep commented for Preview compatibility
+                // console.log("Attempting to load playfield.png (Currently Disabled)");
+
                 // --- Create Ship Texture Dynamically ---
-                // (Code remains the same - 64px size, 4-point visual, offset 0)
+                // (Using centered 4-point visual)
                 const shipGraphics = this.add.graphics();
                 const shipColor = 0xffffff; const shipThickness = 1.5;
                 const shipHeight = 60; const shipWidth = shipHeight * 0.8; // 48
                 const shipTexWidth = 64; const shipTexHeight = 64; const shipCenterX = shipTexWidth / 2; const shipCenterY = shipTexHeight / 2; // 32, 32
-                const verticalOffset = 0; // Keep user's preference
-                const noseX = shipCenterX; const noseY = shipCenterY - shipHeight / 2 - verticalOffset;
-                const leftWingX = shipCenterX - shipWidth / 2; const leftWingY = shipCenterY + shipHeight / 2 - verticalOffset;
-                const rightWingX = shipCenterX + shipWidth / 2; const rightWingY = shipCenterY + shipHeight / 2 - verticalOffset;
-                const tailIndentX = shipCenterX; const tailIndentY = shipCenterY + shipHeight / 4 - verticalOffset;
+                const verticalOffset = 0;
+                const noseX = shipCenterX; const noseY = shipCenterY - shipHeight / 2 - verticalOffset; // (32, 2)
+                const leftWingX = shipCenterX - shipWidth / 2; const leftWingY = shipCenterY + shipHeight / 2 - verticalOffset; // (8, 62)
+                const rightWingX = shipCenterX + shipWidth / 2; const rightWingY = shipCenterY + shipHeight / 2 - verticalOffset; // (56, 62)
+                const tailIndentX = shipCenterX; const tailIndentY = shipCenterY + shipHeight / 4 - verticalOffset; // (32, 47)
                 shipGraphics.fillStyle(shipColor, 1); shipGraphics.beginPath(); shipGraphics.moveTo(noseX, noseY); shipGraphics.lineTo(leftWingX, leftWingY); shipGraphics.lineTo(tailIndentX, tailIndentY); shipGraphics.lineTo(rightWingX, rightWingY); shipGraphics.closePath(); shipGraphics.fillPath(); shipGraphics.generateTexture("ship", shipTexWidth, shipTexHeight); shipGraphics.destroy();
                 console.log("Ship texture generated (64x64 - Filled 4-Point Visual - Offset 0)");
 
@@ -61,7 +72,6 @@
             }
 
             // --- Map Generation Function (from PNG) ---
-            // (Code remains the same, but won't be called unless 'mapPNG' exists)
             generateMapDataFromPNG(textureKey) {
                 console.log(`Generating map from texture: ${textureKey}`);
                 const mapTexture = this.textures.get(textureKey);
@@ -70,18 +80,30 @@
                 const imgHeight = imgSource.height;
                 if (imgWidth === 0 || imgHeight === 0) { console.error("Map texture has zero dimensions!"); return false; }
                 console.log(`Map image dimensions: ${imgWidth}x${imgHeight} pixels.`);
-                const tileWidth = 32; const tileHeight = 32; this.mapWidthInTiles = imgWidth; this.mapHeightInTiles = imgHeight; this.mapPixelWidth = this.mapWidthInTiles * tileWidth; this.mapPixelHeight = this.mapHeightInTiles * tileHeight;
+                const tileWidth = 32; const tileHeight = 32;
+                // **FIX:** Set scene properties for map dimensions
+                this.mapWidthInTiles = imgWidth;
+                this.mapHeightInTiles = imgHeight;
+                this.mapPixelWidth = this.mapWidthInTiles * tileWidth;
+                this.mapPixelHeight = this.mapHeightInTiles * tileHeight;
+
                 const tempCanvas = document.createElement('canvas'); tempCanvas.width = imgWidth; tempCanvas.height = imgHeight; const tempCtx = tempCanvas.getContext('2d', { willReadFrequently: true }); tempCtx.drawImage(imgSource, 0, 0); let imageData; try { imageData = tempCtx.getImageData(0, 0, imgWidth, imgHeight); } catch (e) { console.error("Could not get ImageData from map texture. Possible CORS issue.", e); return false; } const pixels = imageData.data; this.tilemapData = [];
                 for (let y = 0; y < imgHeight; y++) { const row = []; for (let x = 0; x < imgWidth; x++) { const pixelIndex = (y * imgWidth + x) * 4; const r = pixels[pixelIndex]; const g = pixels[pixelIndex + 1]; const b = pixels[pixelIndex + 2]; let tileIndex = 1; if (r === 0 && g === 0 && b === 0) { tileIndex = 0; } row.push(tileIndex); } this.tilemapData.push(row); }
-                console.log(`Generated ${this.mapWidthInTiles}x${this.mapHeightInTiles} tilemap data from PNG.`);
+                // **FIX:** Add success log
+                console.log(`Successfully generated ${this.mapWidthInTiles}x${this.mapHeightInTiles} tilemap data from PNG.`);
                 return true;
             }
 
             // --- Map Generation Function (Procedural Fallback) ---
-            // (Code remains the same)
             generateMapDataProcedurally() {
                 console.log("Generating procedural map data (fallback)...");
-                this.mapWidthInTiles = 40; this.mapHeightInTiles = 32; const tileWidth = 32; const tileHeight = 32; this.mapPixelWidth = this.mapWidthInTiles * tileWidth; this.mapPixelHeight = this.mapHeightInTiles * tileHeight;
+                // Use default dimensions
+                this.mapWidthInTiles = 40; this.mapHeightInTiles = 32;
+                const tileWidth = 32; const tileHeight = 32;
+                this.mapPixelWidth = this.mapWidthInTiles * tileWidth; // 1280
+                this.mapPixelHeight = this.mapHeightInTiles * tileHeight; // 1024
+
+                // Generate border and obstacles
                 this.tilemapData = []; const borderThickness = 2;
                 for (let y = 0; y < this.mapHeightInTiles; y++) { const row = []; for (let x = 0; x < this.mapWidthInTiles; x++) { if (x < borderThickness || x >= this.mapWidthInTiles - borderThickness || y < borderThickness || y >= this.mapHeightInTiles - borderThickness) { row.push(0); } else { row.push(1); } } this.tilemapData.push(row); }
                 const innerMapStartX = borderThickness; const innerMapEndX = this.mapWidthInTiles - borderThickness; const innerMapStartY = borderThickness; const innerMapEndY = this.mapHeightInTiles - borderThickness; let placedObstacles = 0; const maxPlacementAttempts = 100; const placeObstacle = (tileX, tileY, width = 1, height = 1) => { if (tileX < innerMapStartX || tileX + width > innerMapEndX || tileY < innerMapStartY || tileY + height > innerMapEndY) { return false; } for (let y = tileY; y < tileY + height; y++) { for (let x = tileX; x < tileX + width; x++) { if (this.tilemapData[y][x] !== 1) { return false; } } } for (let y = tileY; y < tileY + height; y++) { for (let x = tileX; x < tileX + width; x++) { this.tilemapData[y][x] = 0; } } return true; };
@@ -96,25 +118,19 @@
             create() {
                 // --- Generate Map Data (Try PNG, then Fallback) ---
                 let mapGenerated = false;
-                // Check if texture exists (it won't if loading was commented out or failed)
                 if (this.textures.exists('mapPNG')) {
                     mapGenerated = this.generateMapDataFromPNG('mapPNG');
                 }
-
                 if (!mapGenerated) {
-                    // Fallback if PNG failed to load or process
                     console.warn("Texture 'mapPNG' not found or processing failed, using procedural fallback.");
                     mapGenerated = this.generateMapDataProcedurally();
                 }
-
                 if (!mapGenerated || !this.tilemapData) {
-                    // Serious error if neither map generation worked
                     this.add.text(50, 50, 'Error: Could not generate map data!', { color: '#ff0000', fontSize: '20px' });
-                    return; // Stop creation
+                    return;
                 }
 
                 // --- Create the Phaser Tilemap (Using generated data) ---
-                // (Code remains the same)
                 const tileWidth = 32; const tileHeight = 32;
                 this.map = this.make.tilemap({ data: this.tilemapData, tileWidth: tileWidth, tileHeight: tileHeight });
                 const tileset = this.map.addTilesetImage('collisionTile', 'collisionTile', tileWidth, tileHeight, 0, 0);
@@ -122,15 +138,56 @@
                 console.log("Visual tilemap layer created.");
 
                 // --- Convert Tilemap Layer for Matter.js ---
-                // (Code remains the same)
-                if (this.visualLayer) { this.visualLayer.setCollision(0); this.visualLayer.setCollision(1, false); this.matter.world.convertTilemapLayer(this.visualLayer, { label: 'terrain', collisionFilter: { category: 0x0002 } }); console.log("Tilemap layer converted for Matter physics (colliding on index 0)."); } else { console.error("Visual layer not created! Cannot convert for Matter."); }
+                if (this.visualLayer) {
+                    this.visualLayer.setCollision(0); // Set collision on index 0
+                    this.visualLayer.setCollision(1, false);
+                    this.matter.world.convertTilemapLayer(this.visualLayer, { label: 'terrain', collisionFilter: { category: 0x0002 } });
+                    console.log("Tilemap layer converted for Matter physics (colliding on index 0).");
+                } else {
+                    console.error("Visual layer not created! Cannot convert for Matter.");
+                }
 
 
                 // --- Create Player with Matter.js ---
-                // (Code remains the same - using user's preferred settings)
-                const playerStartX = this.mapPixelWidth / 2; const playerStartY = this.mapPixelHeight / 2;
-                const shipVertices = '0 -30 -24 26 24 26'; // Corresponds to offset 0, width factor 0.8
-                const Matter = Phaser.Physics.Matter.Matter; let parsedVerts = Matter.Vertices.fromPath(shipVertices); console.log("Using original parsed vertices (no re-centering)."); const shipBody = Matter.Bodies.fromVertices(playerStartX, playerStartY, parsedVerts, { label: 'player-body', frictionAir: 0.01, restitution: 0.5, density: 0.001, collisionFilter: { category: 0x0001, mask: 0x0002 } }, true); this.player = this.matter.add.sprite(playerStartX, playerStartY, 'ship', null, { label: 'player' }); this.player.setExistingBody(shipBody); this.player.setOrigin(0.5, 0.58); console.log("Player sprite created.");
+                const playerStartX = this.mapPixelWidth / 2;
+                const playerStartY = this.mapPixelHeight / 2;
+
+                // **FIX:** Define vertices relative to center (0,0) for the 4-POINT collision shape
+                // matching the visual drawing (verticalOffset = 0, shipHeight = 60, shipWidth=48)
+                // Nose Y: -30 - 0 = -30
+                // Wing Y: 30 - 0 = 30
+                // Wing X: +/- 24
+                // Indent Y: 15 - 0 = 15 (relative to center Y=0)
+                const shipVertices = '0 -30 -24 30 0 15 24 30'; // 4-point shape
+                const Matter = Phaser.Physics.Matter.Matter;
+                let parsedVerts = Matter.Vertices.fromPath(shipVertices);
+
+                // Keep vertex re-centering REMOVED
+                console.log("Using original parsed 4-point vertices (no re-centering).");
+
+                // Create the custom Matter Body using the 4-point vertices
+                const shipBody = Matter.Bodies.fromVertices(
+                    playerStartX, playerStartY,
+                    parsedVerts, // Use original parsed 4-point verts
+                    { // Options for the Matter Body
+                        label: 'player-body',
+                        frictionAir: 0.01,
+                        restitution: 0.5,
+                        density: 0.001,
+                        collisionFilter: { category: 0x0001, mask: 0x0002 }
+                    }
+                    // Let Matter handle decomposition
+                );
+
+                // Create the sprite (uses the centered 4-point visual texture)
+                this.player = this.matter.add.sprite(playerStartX, playerStartY, 'ship', null, { label: 'player' });
+
+                // Assign the custom 4-point body to the sprite
+                this.player.setExistingBody(shipBody);
+                // Use origin specified by user previously for potential alignment
+                this.player.setOrigin(0.5, 0.58); // Keep this from user setting
+
+                console.log("Player sprite created with 4-point Matter body.");
 
 
                 // --- Setup Collisions (Matter handles physics) ---
@@ -150,7 +207,7 @@
 
 
                 // --- Camera & World Bounds ---
-                // (Code remains the same)
+                // Use dynamically determined map dimensions
                 this.cameras.main.setBounds(0, 0, this.mapPixelWidth, this.mapPixelHeight);
                 this.matter.world.setBounds(0, 0, this.mapPixelWidth, this.mapPixelHeight);
                 this.cameras.main.startFollow(this.player, true, 0.1, 0.1);
@@ -172,7 +229,7 @@
 
 
             update(time, delta) {
-                // (Update logic remains the same - using user's thrust value)
+                // (Update logic remains the same)
                 if (!this.player || !this.cursors) return; const body = this.player.body;
                 if (this.touchThrustPointer && !this.touchThrustPointer.isDown) { this.handlePointerUp(this.touchThrustPointer); } if (this.touchRotatePointer && !this.touchRotatePointer.isDown) { this.handlePointerUp(this.touchRotatePointer); } else if (this.touchRotatePointer && this.touchRotatePointer.isDown) { this.handlePointerMove(this.touchRotatePointer); }
                 let shouldRotateLeft = this.cursors.left.isDown || this.touchRotatingLeft; let shouldRotateRight = this.cursors.right.isDown || this.touchRotatingRight; let shouldThrust = this.cursors.up.isDown || this.touchThrusting;
@@ -191,8 +248,27 @@
         } // End of PlayScene Class
 
         // --- Phaser Game Configuration ---
-        // Keep user's gravity value
-        const config = { type: Phaser.AUTO, width: '100%', height: '100%', scale: { mode: Phaser.Scale.RESIZE, }, physics: { default: 'matter', matter: { gravity: { y: 0.32 }, debug: true, debugBodyColor: 0xffffff } }, scene: PlayScene, backgroundColor: '#222222' };
+        const config = {
+            type: Phaser.AUTO,
+            // **FIX:** Set fixed width/height based on fallback map size
+            width: 1280, // 40 tiles * 32px
+            height: 1024, // 32 tiles * 32px
+            // **FIX:** Remove scale manager config to prevent scaling
+            // scale: {
+            //     mode: Phaser.Scale.RESIZE,
+            // },
+            physics: {
+                default: 'matter',
+                matter: {
+                    // Keep user's gravity value
+                    gravity: { y: 0.32 }, // User requested value
+                    debug: true,
+                    debugBodyColor: 0xffffff
+                }
+            },
+            scene: PlayScene,
+            backgroundColor: '#222222'
+        };
 
         // --- Create Phaser Game Instance ---
         const game = new Phaser.Game(config);
